--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,3 +1,332 @@
-h1 {
-  font-size: 10px;
+
+//kode opdeling kommentar
+
+/*========================================================================
+ ==============================Side====================================
+=========================================================================*/
+
+/*-------------------------------------------------------------------------
+----------------------------------Sektion-----------------------
+---------------------------------------------------------------------------*/
+
+/*================Underdel================*/
+
+
+
+
+
+//her er alle de ting der ikke passer andre steder.
+/*========================================================================
+ ==============================Generelt====================================
+=========================================================================*/
+/*  Hvis vi skal have en costume font
+@font-face { //Definere fonten odin, så vi kan bruge den
+  font-family: odin;
+  font-weight: 100;
+  src: url('odin.otf');
 }
+*/
+
+
+body {
+  margin: 0; // Ingen kanter i siden af browser
+  font-family: Arial;
+  color: black;
+}
+
+h1, h2, h4, h5, h6 {
+  margin: 0; // Ingen ydre margen fra overskrifter
+  padding: 50px; // Ingen indre margen fra overskrifter
+  letter-spacing: 5px; //samme som tracking i PS
+  text-transform: uppercase; //gør at alle overskrifter er UPPERCASE
+}
+
+p {
+  margin: 0; // Ingen ydre margen fra paragraffer
+  padding: 0; // Ingen indre margen fra paragraffer
+}
+
+// Sikrer billeder er responsive
+img {
+  display: block; // Billeder er et element (laver linjeskift)
+  max-width: 100%; // Bredde mÂ maks fylde 100%
+  height: auto; // H¯jden skal tilpasse sig
+}
+
+
+
+//Farve variabler
+$color-red: #f70007;
+
+//andre variabler
+$sektion-hojde: 500;
+
+
+//12 column grid
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+}
+
+.red{
+  color: $color-red;
+}
+
+
+/*================knappen================*/
+
+
+/*-------------------------------------------------------------------------
+----------------------------------Header, footer & Landing----------------------
+---------------------------------------------------------------------------*/
+
+/*================HEADER===============*/
+
+.header { //farve og længde på header sektionen
+  background-color: blue;
+  height: 100px; // Højden på headeren. Hvis denne ændres skal .logo { top } også ændres
+  background-image: url("../images/tobais.png"); // her skal der være et billede
+  background-size: cover; //fylder headeren ud
+  grid-column: 2/3;
+  min-width: 100px;
+  max-width: 100px;
+}
+
+/*================landing==============*/
+.landing {
+
+  background-image: url("../images/tobais.png"); // her skal der være et billede
+  background-size: cover; //fylder headeren ud
+  height: $sektion-hojde;
+}
+
+
+/*================Footer==============*/
+.footer {
+  display: grid;
+  height: $sektion-hojde;
+  background-color: #f6f76a;
+}
+
+/*========================================================================
+ ==============================forside====================================
+=========================================================================*/
+
+/*-------------------------------------------------------------------------
+----------------------------------vinen-----------------------
+---------------------------------------------------------------------------*/
+.vinen {
+  display: grid;
+  height: $sektion-hojde;
+}
+.vinen-flasken {
+  grid-column: 1/5;
+  background-color: #f70007;
+}
+
+.vinen-label {
+  grid-column: 5/9;
+  background-color: rgba(128, 45, 247, 0.41);
+}
+
+.vinen-tekst {
+  grid-column: 9/13;
+  background-color: #2797f7;
+}
+
+/*-------------------------------------------------------------------------
+----------------------------------gaarden-----------------------
+---------------------------------------------------------------------------*/
+
+.gaarden {
+  display: grid;
+  height: $sektion-hojde;
+  background-color: #c4f732;
+}
+
+.gaarden-beskrivelse {
+  grid-column: 5/9;
+}
+
+/*-------------------------------------------------------------------------
+----------------------------------instagram-----------------------
+---------------------------------------------------------------------------*/
+
+.instagram{
+
+  display: grid;
+  grid-template-rows: $sektion-hojde/2,$sektion-hojde/2;
+  height: $sektion-hojde;
+  background-color: #f76640;
+}
+
+.instagram-tal {
+  grid-column: 1/4;
+  grid-row: 1/3;
+  background-color: #42cef7;
+}
+
+.instagrambillede {
+  background-image: url("../images/butik.jpg");
+}
+
+.instagrambillede.billede1{
+  grid-row: 1/2;
+  grid-column: 4/7;
+}
+
+.instagrambillede.billede2{
+  grid-row: 1/2;
+  grid-column: 7/10;
+}
+
+.instagrambillede.billede3{
+  grid-row: 1/2;
+  grid-column: 10/13;
+}
+
+.instagrambillede.billede4{
+  grid-row: 2/3;
+  grid-column: 4/7;
+}
+
+.instagrambillede.billede5{
+  grid-row: 2/3;
+  grid-column: 7/10;
+}
+
+.instagrambillede.billede6{
+  grid-row: 2/3;
+  grid-column: 10/13;
+}
+
+/*-------------------------------------------------------------------------
+----------------------------------stedet-----------------------
+---------------------------------------------------------------------------*/
+
+.stedet {
+  display: grid;
+  height: $sektion-hojde;
+  background-color: #c4f732;
+}
+.stedet-beskrivelse{
+  background-color: #69f756;
+  grid-column: 1/10;
+}
+.stedet-boks{
+  background-color: #f6f7fd;
+  grid-column: 10/13;
+}
+
+/*-------------------------------------------------------------------------
+----------------------------------kort-----------------------
+---------------------------------------------------------------------------*/
+
+.kort {
+  display: grid;
+  height: $sektion-hojde;
+  background-color: #f70f95;
+}
+/*================Responsivitet===============*/
+
+
+@media screen and (min-width: 660px) {
+  // Alt over 660. Tablet og Desktop
+
+  /*================Forside===============*/
+
+  /*================Kontakt===============*/
+
+
+}
+
+@media screen and (min-width: 1600px) {
+  // Meget store desktop skærme
+
+  /*================Forside===============*/
+
+  /*================Kontakt===============*/
+}
+
+
+
+
+
+
+
+
+/*================BURGER MENU===============*/
+// den ligger i bunden fordi den fylder meget, og ikke skal ændres på :)
+
+.hamburger{
+  z-index: 2;
+  position: fixed;
+  top: 20px;
+  right: 45px;
+}
+
+/* The Overlay (background) */
+.overlay {
+  /* Height & width depends on how you want to reveal the overlay (see JS below) */
+  height: 100%;
+  width: 0;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  background-color: rgb(0,0,0); /* Black fallback color */
+  background-color: rgba(247, 216, 136, 0.9); /* Black w/opacity */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+}
+
+/* Position the content inside the overlay */
+.overlay-content {
+  position: relative;
+  top: 25%; /* 25% from the top */
+  width: 100%; /* 100% width */
+  text-align: center; /* Centered text/links */
+  margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+}
+
+/* The navigation links inside the overlay */
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 22px;
+  color: #f6f7fd;
+  display: block; /* Display block instead of inline */
+  transition: 0.3s; /* Transition effects on hover (color) */
+  font-family: odin;
+  letter-spacing: 5px;
+  font-weight: 100;
+}
+
+/* When you mouse over the navigation links, change their color */
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+/* Position the close button (top right corner) */
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+
+}
+
+  /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+  @media screen and (max-height: 450px) {
+    .overlay a {
+      font-size: 20px
+    }
+    .overlay .closebtn {
+      font-size: 40px;
+      top: 15px;
+      right: 35px;
+    }
+  }
+
+
