--- a/css/styles.scss
+++ b/css/styles.scss
@@ -30,8 +30,8 @@
 
 body {
   margin: 0; // Ingen kanter i siden af browser
-  font-family: Arial;
-  color: black;
+  font-family: Futura, Arial;
+  color: white;
 }
 
 h1, h2, h4, h5, h6 {
@@ -39,6 +39,10 @@ h1, h2, h4, h5, h6 {
   padding: 50px; // Ingen indre margen fra overskrifter
   letter-spacing: 5px; //samme som tracking i PS
   text-transform: uppercase; //gør at alle overskrifter er UPPERCASE
+}
+
+h1 {
+
 }
 
 p {
@@ -59,7 +63,7 @@ img {
 $color-red: #f70007;
 
 //andre variabler
-$sektion-hojde: 500;
+$sektion-hojde: 500; //det her er standard højden på sektioner i px
 
 
 //12 column grid
@@ -99,6 +103,12 @@ $sektion-hojde: 500;
   background-image: url("../images/tobais.png"); // her skal der være et billede
   background-size: cover; //fylder headeren ud
   height: $sektion-hojde;
+  grid-template-rows: 100px auto;
+}
+.landing h1{
+  grid-column: 1/13;
+  grid-row: 2/3;
+  margin: auto;
 }
 
 
@@ -132,7 +142,11 @@ $sektion-hojde: 500;
 
 .vinen-tekst {
   grid-column: 9/13;
-  background-color: #2797f7;
+  background-image: url("../images/butik.jpg");
+}
+.overlayfarvered {
+  background-color: rgba(247, 9, 0, 0.41);
+  height: 100%;
 }
 
 /*-------------------------------------------------------------------------
@@ -164,7 +178,12 @@ $sektion-hojde: 500;
 .instagram-tal {
   grid-column: 1/4;
   grid-row: 1/3;
-  background-color: #42cef7;
+  background-image: url("../images/butik.jpg");
+}
+
+.overlayfarvewhite {
+  background-color: rgba(247, 247, 247, 0.8);
+  height: 100%;
 }
 
 .instagrambillede {
@@ -228,11 +247,47 @@ $sektion-hojde: 500;
   height: $sektion-hojde;
   background-color: #f70f95;
 }
+
+/*========================================================================
+ ==============================Contact====================================
+=========================================================================*/
+
+/*-------------------------------------------------------------------------
+----------------------------------Kontaktinfo-----------------------
+---------------------------------------------------------------------------*/
+.kontaktinfo {
+  display: grid;
+  height: $sektion-hojde;
+  background-color: #e3f787;
+}
+
+.form {
+  grid-column: 1/9;
+  background-color: #f6f7fd;
+}
+
+.find-us {
+  grid-column: 9/13;
+  background-color: #69f756;
+}
+
+/*-------------------------------------------------------------------------
+----------------------------------googlemaps-----------------------
+---------------------------------------------------------------------------*/
+.googlemaps {
+  display: grid;
+  height: $sektion-hojde;
+  background-color: #6fcaf7;
+}
+
 /*================Responsivitet===============*/
 
 
 @media screen and (min-width: 660px) {
   // Alt over 660. Tablet og Desktop
+  h1{
+    font-size: 7vw;
+  }
 
   /*================Forside===============*/
 
@@ -243,6 +298,10 @@ $sektion-hojde: 500;
 
 @media screen and (min-width: 1600px) {
   // Meget store desktop skærme
+  h1{
+    font-size: 100px;
+  }
+
 
   /*================Forside===============*/
 
