--- a/css/styles.css
+++ b/css/styles.css
@@ -18,18 +18,23 @@
 */
 body {
   margin: 0;
-  font-family: Futura, Arial;
-  color: white; }
+  font-family: "Futura PT";
+  color: white;
+  font-size: 16px;
+  font-weight: normal; }
 
 h1, h2, h4, h5, h6 {
   margin: 0;
-  padding: 50px;
+  padding: 30px;
   letter-spacing: 5px;
   text-transform: uppercase; }
 
+h2 {
+  font-size: 38px; }
+
 p {
   margin: 0;
-  padding: 0; }
+  padding: 0px; }
 
 img {
   display: block;
@@ -42,7 +47,24 @@ img {
   grid-template-rows: auto; }
 
 .red {
-  color: #f70007; }
+  color: #750002; }
+
+.ghost-button {
+  color: #ffffff;
+  text-align: center;
+  border: 2px solid #ffffff;
+  font-size: 14px;
+  padding: 7px 2px;
+  font-weight: normal;
+  margin: 2px 0;
+  margin-right: 12px;
+  display: inline-block;
+  text-decoration: none;
+  min-width: 120px; }
+
+.ghost-button:hover, .ghost-button:active {
+  color: #750002;
+  background: #ffffff; }
 
 /*================knappen================*/
 /*-------------------------------------------------------------------------
@@ -50,18 +72,18 @@ img {
 ---------------------------------------------------------------------------*/
 /*================HEADER===============*/
 .header {
-  background-color: blue;
   height: 100px;
-  background-image: url("../images/tobais.png");
+  background-image: url("../images/logo.png");
   background-size: cover;
-  grid-column: 2/3;
+  grid-column: 2/7;
   min-width: 100px;
   max-width: 100px; }
 
 /*================landing==============*/
 .landing {
-  background-image: url("../images/tobais.png");
+  background-image: url("../images/moutain-small-BW.png");
   background-size: cover;
+  background-position: bottom;
   height: 500;
   grid-template-rows: 100px auto; }
 
@@ -88,19 +110,31 @@ img {
 
 .vinen-flasken {
   grid-column: 1/5;
-  background-color: #f70007; }
+  background-image: url("../images/merlot-falske.jpg");
+  background-position: center;
+  background-size: cover; }
 
 .vinen-label {
   grid-column: 5/9;
-  background-color: rgba(128, 45, 247, 0.41); }
+  background-image: url("../images/merlot-kasse.jpg");
+  background-position: center;
+  background-size: cover; }
 
 .vinen-tekst {
   grid-column: 9/13;
-  background-image: url("../images/butik.jpg"); }
+  background-image: url("../images/berries-closeup-small-bw.png");
+  background-size: cover; }
+
+.vinen-flasken, p {
+  padding: 0 30 30 30; }
 
 .overlayfarvered {
-  background-color: rgba(247, 9, 0, 0.41);
+  background-color: rgba(146, 4, 0, 0.61);
   height: 100%; }
+
+.knapper {
+  display: flex;
+  justify-content: center; }
 
 /*-------------------------------------------------------------------------
 ----------------------------------gaarden-----------------------
@@ -108,10 +142,11 @@ img {
 .gaarden {
   display: grid;
   height: 500;
-  background-color: #c4f732; }
+  background-image: url("../images/overlook-winyard-small-bw.png");
+  background-position: center; }
 
 .gaarden-beskrivelse {
-  grid-column: 5/9; }
+  grid-column: 3/11; }
 
 /*-------------------------------------------------------------------------
 ----------------------------------instagram-----------------------
@@ -129,18 +164,28 @@ img {
 
 .overlayfarvewhite {
   background-color: rgba(247, 247, 247, 0.8);
-  height: 100%; }
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column; }
+
+.overlayfarvewhite h1 {
+  padding-top: 150px; }
 
 .instagrambillede {
   background-image: url("../images/butik.jpg"); }
 
 .instagrambillede.billede1 {
   grid-row: 1/2;
-  grid-column: 4/7; }
+  grid-column: 4/7;
+  background-image: url("../images/croks.jpeg");
+  background-size: cover; }
 
 .instagrambillede.billede2 {
   grid-row: 1/2;
-  grid-column: 7/10; }
+  grid-column: 7/10;
+  background-image: url("../images/wine-table.jpeg");
+  background-size: cover; }
 
 .instagrambillede.billede3 {
   grid-row: 1/2;
