--- a/css/styles.scss
+++ b/css/styles.scss
@@ -30,24 +30,27 @@
 
 body {
   margin: 0; // Ingen kanter i siden af browser
-  font-family: Futura, Arial;
+  font-family: "Futura PT";
   color: white;
+  font-size: 16px;
+  font-weight: normal;
+
 }
 
 h1, h2, h4, h5, h6 {
   margin: 0; // Ingen ydre margen fra overskrifter
-  padding: 50px; // Ingen indre margen fra overskrifter
+  padding: 30px;
   letter-spacing: 5px; //samme som tracking i PS
   text-transform: uppercase; //gør at alle overskrifter er UPPERCASE
 }
 
-h1 {
-
+h2 {
+  font-size: 38px;
 }
 
 p {
   margin: 0; // Ingen ydre margen fra paragraffer
-  padding: 0; // Ingen indre margen fra paragraffer
+  padding: 0px; // Ingen indre margen fra paragraffer
 }
 
 // Sikrer billeder er responsive
@@ -60,7 +63,7 @@ img {
 
 
 //Farve variabler
-$color-red: #f70007;
+$color-red: #750002;
 
 //andre variabler
 $sektion-hojde: 500; //det her er standard højden på sektioner i px
@@ -76,6 +79,25 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 .red{
   color: $color-red;
 }
+//knap
+.ghost-button {
+  color: #ffffff;
+  text-align: center;
+  border: 2px solid #ffffff;
+  font-size: 14px;
+  padding: 7px 2px;
+  font-weight: normal;
+  margin: 2px 0;
+  margin-right: 12px;
+  display: inline-block;
+  text-decoration: none;
+  min-width: 120px;
+}
+
+.ghost-button:hover, .ghost-button:active {
+  color: $color-red;
+  background: #ffffff;
+}
 
 
 /*================knappen================*/
@@ -88,11 +110,11 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 /*================HEADER===============*/
 
 .header { //farve og længde på header sektionen
-  background-color: blue;
+
   height: 100px; // Højden på headeren. Hvis denne ændres skal .logo { top } også ændres
-  background-image: url("../images/tobais.png"); // her skal der være et billede
+  background-image: url("../images/logo.png"); // her skal der være et billede
   background-size: cover; //fylder headeren ud
-  grid-column: 2/3;
+  grid-column: 2/7;
   min-width: 100px;
   max-width: 100px;
 }
@@ -100,10 +122,12 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 /*================landing==============*/
 .landing {
 
-  background-image: url("../images/tobais.png"); // her skal der være et billede
+  background-image: url("../images/moutain-small-BW.png"); // her skal der være et billede
   background-size: cover; //fylder headeren ud
+  background-position: bottom;
   height: $sektion-hojde;
   grid-template-rows: 100px auto;
+
 }
 .landing h1{
   grid-column: 1/13;
@@ -132,21 +156,35 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 }
 .vinen-flasken {
   grid-column: 1/5;
-  background-color: #f70007;
+  background-image: url("../images/merlot-falske.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 .vinen-label {
   grid-column: 5/9;
-  background-color: rgba(128, 45, 247, 0.41);
+  background-image: url("../images/merlot-kasse.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 .vinen-tekst {
   grid-column: 9/13;
-  background-image: url("../images/butik.jpg");
+  background-image: url("../images/berries-closeup-small-bw.png");
+  background-size: cover;
+}
+
+.vinen-flasken, p{
+  padding: 0 30 30 30;
 }
 .overlayfarvered {
-  background-color: rgba(247, 9, 0, 0.41);
+  background-color: rgba(146, 4, 0, 0.61);
   height: 100%;
+}
+
+.knapper {
+  display: flex;
+  justify-content: center;
 }
 
 /*-------------------------------------------------------------------------
@@ -156,11 +194,12 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 .gaarden {
   display: grid;
   height: $sektion-hojde;
-  background-color: #c4f732;
+  background-image: url("../images/overlook-winyard-small-bw.png");
+  background-position: center;
 }
 
 .gaarden-beskrivelse {
-  grid-column: 5/9;
+  grid-column: 3/11;
 }
 
 /*-------------------------------------------------------------------------
@@ -184,6 +223,13 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 .overlayfarvewhite {
   background-color: rgba(247, 247, 247, 0.8);
   height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.overlayfarvewhite h1{
+  padding-top: 150px;
 }
 
 .instagrambillede {
@@ -193,11 +239,15 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 .instagrambillede.billede1{
   grid-row: 1/2;
   grid-column: 4/7;
+  background-image: url("../images/croks.jpeg");
+  background-size: cover;
 }
 
 .instagrambillede.billede2{
   grid-row: 1/2;
   grid-column: 7/10;
+  background-image: url("../images/wine-table.jpeg");
+  background-size: cover;
 }
 
 .instagrambillede.billede3{
