--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,34 @@ img {
 .footer {
   display: grid;
   height: 500;
-  background-color: #f6f76a; }
+  background-image: url("../images/footer_img_bw.jpg");
+  background-size: cover; }
+
+.contact_footer {
+  grid-column: 4/9;
+  margin-left: auto; }
+
+.getintouch {
+  grid-column: 4/9;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: bold; }
+
+.contact_flex {
+  grid-column: 3/10;
+  margin-left: auto;
+  margin-right: auto; }
+
+.contect_info {
+  margin: 10px; }
+
+.SoMe {
+  grid-column: 4/9;
+  display: flex;
+  justify-content: center; }
+
+.SoMe_icon {
+  margin: 5px; }
 
 /*========================================================================
  ==============================forside====================================
@@ -258,6 +285,11 @@ img {
 @media screen and (min-width: 660px) {
   h1 {
     font-size: 7vw; }
+
+  .contact_flex {
+    display: flex;
+    -webkit-flex: flex;
+    justify-content: center; }
 
   /*================Forside===============*/
   /*================Kontakt===============*/ }
