Billede af muscatkasse

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -320,7 +320,7 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
   grid-column: 1/10;
 }
 .stedet-boks{
-  background-color: #f6f7fd;
+  background-image: url("../images/muscat-kasse.png");
   grid-column: 10/13;
 }
 
