Google maps - kontaktside

--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,10 @@ img {
 
 .form {
   grid-column: 1/9;
-  background-color: #f6f7fd; }
+  background-color: #a0a0a0; }
+
+.region_beskrivelse {
+  margin: 30px; }
 
 .find-us {
   grid-column: 9/13;
