Baggrundsbillede for om stedet

--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,9 @@ img {
   background-color: #c4f732; }
 
 .stedet-beskrivelse {
-  background-color: #69f756;
+  background-image: url("../images/stedet.png");
+  background-position: center;
+  background-size: cover;
   grid-column: 1/10; }
 
 .stedet-boks {
