--- a/css/styles.css
+++ b/css/styles.css
@@ -137,13 +137,13 @@ img {
 
 .vinen-flasken {
   grid-column: 1/5;
-  background-image: url("../images/merlot-falske.jpg");
+  background-image: url("../images/wineglass.png");
   background-position: center;
   background-size: cover; }
 
 .vinen-label {
   grid-column: 5/9;
-  background-image: url("../images/merlot-kasse.jpg");
+  background-image: url("../images/merlot.png");
   background-position: center;
   background-size: cover; }
 
@@ -256,7 +256,10 @@ img {
 .kort {
   display: grid;
   height: 500;
-  background-color: #f70f95; }
+  background-image: url("../images/kort.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat; }
 
 /*========================================================================
  ==============================Contact====================================
@@ -278,7 +281,9 @@ img {
 
 .find-us {
   grid-column: 9/13;
-  background-color: #69f756; }
+  background-image: url("../images/propper.png");
+  background-position: inherit;
+  background-size: cover; }
 
 /*-------------------------------------------------------------------------
 ----------------------------------googlemaps-----------------------
