--- a/css/styles.scss
+++ b/css/styles.scss
@@ -340,6 +340,11 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
   background-size: cover;
   background-repeat: no-repeat;
 }
+.buy{
+  text-align: center;
+  grid-column: 1/13;
+}
+
 
 /*========================================================================
  ==============================Contact====================================
