--- a/css/styles.css
+++ b/css/styles.css
@@ -261,6 +261,10 @@ img {
   background-size: cover;
   background-repeat: no-repeat; }
 
+.buy {
+  text-align: center;
+  grid-column: 1/13; }
+
 /*========================================================================
  ==============================Contact====================================
 =========================================================================*/
