--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,8 @@ img {
 
 .contact_footer {
   grid-column: 4/9;
-  margin-left: auto; }
+  margin-left: auto;
+  text-align: center; }
 
 .getintouch {
   grid-column: 4/9;
@@ -216,19 +217,31 @@ img {
 
 .instagrambillede.billede3 {
   grid-row: 1/2;
-  grid-column: 10/13; }
+  grid-column: 10/13;
+  background-image: url("../images/intagramfoto2.jpeg");
+  background-size: cover;
+  background-position: center; }
 
 .instagrambillede.billede4 {
   grid-row: 2/3;
-  grid-column: 4/7; }
+  grid-column: 4/7;
+  background-image: url("../images/instagramfoto3.jpeg");
+  background-position: center;
+  background-size: cover; }
 
 .instagrambillede.billede5 {
   grid-row: 2/3;
-  grid-column: 7/10; }
+  grid-column: 7/10;
+  background-image: url("../images/instagramfoto1.jpeg");
+  background-size: cover;
+  background-position: center; }
 
 .instagrambillede.billede6 {
   grid-row: 2/3;
-  grid-column: 10/13; }
+  grid-column: 10/13;
+  background-image: url("../images/instagramfoto4.jpeg");
+  background-position: center;
+  background-size: cover; }
 
 /*-------------------------------------------------------------------------
 ----------------------------------stedet-----------------------
