--- a/css/styles.scss
+++ b/css/styles.scss
@@ -147,6 +147,7 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 .contact_footer{
   grid-column: 4/9;
   margin-left: auto;
+  text-align: center;
 }
 
 .getintouch{
@@ -171,6 +172,7 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
   grid-column: 4/9;
   display: flex;
   justify-content: center;
+
 }
 
 .SoMe_icon{
@@ -289,21 +291,33 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 .instagrambillede.billede3{
   grid-row: 1/2;
   grid-column: 10/13;
+  background-image: url("../images/intagramfoto2.jpeg");
+  background-size: cover;
+  background-position: center;
 }
 
 .instagrambillede.billede4{
   grid-row: 2/3;
   grid-column: 4/7;
+  background-image: url("../images/instagramfoto3.jpeg");
+  background-position: center;
+  background-size: cover;
 }
 
 .instagrambillede.billede5{
   grid-row: 2/3;
   grid-column: 7/10;
+  background-image: url("../images/instagramfoto1.jpeg");
+  background-size: cover;
+  background-position: center;
 }
 
 .instagrambillede.billede6{
   grid-row: 2/3;
   grid-column: 10/13;
+  background-image: url("../images/instagramfoto4.jpeg");
+  background-position: center;
+  background-size: cover;
 }
 
 /*-------------------------------------------------------------------------
