--- a/css/styles.css
+++ b/css/styles.css
@@ -276,7 +276,8 @@ img {
 
 .buy {
   text-align: center;
-  grid-column: 1/13; }
+  grid-column: 1/13;
+  font-family: Futura; }
 
 /*========================================================================
  ==============================Contact====================================
@@ -291,7 +292,7 @@ img {
 
 .form {
   grid-column: 1/9;
-  background-color: #a0a0a0; }
+  background-color: lightgray; }
 
 .region_beskrivelse {
   margin: 30px; }
