--- a/css/styles.scss
+++ b/css/styles.scss
@@ -357,7 +357,9 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 .buy{
   text-align: center;
   grid-column: 1/13;
+  font-family: Futura;
 }
+
 
 
 /*========================================================================
@@ -375,7 +377,7 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 
 .form {
   grid-column: 1/9;
-  background-color: #a0a0a0;
+  background-color: lightgray;
 }
 
 .region_beskrivelse{
