--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
 */
 body {
   margin: 0;
-  font-family: "Futura PT";
+  font-family: "Futura PT", Futura;
   color: white;
   font-size: 16px;
   font-weight: normal; }
@@ -28,6 +28,9 @@ h1, h2, h4, h5, h6 {
   padding: 30px;
   letter-spacing: 5px;
   text-transform: uppercase; }
+
+h1 {
+  font-size: 50px; }
 
 h2 {
   font-size: 38px; }
@@ -100,18 +103,17 @@ img {
   background-size: cover; }
 
 .contact_footer {
-  grid-column: 4/9;
-  margin-left: auto;
+  grid-column: 4/10;
   text-align: center; }
 
 .getintouch {
-  grid-column: 4/9;
+  grid-column: 4/10;
   margin-left: auto;
   margin-right: auto;
   font-weight: bold; }
 
 .contact_flex {
-  grid-column: 3/10;
+  grid-column: 2/12;
   margin-left: auto;
   margin-right: auto; }
 
@@ -119,7 +121,7 @@ img {
   margin: 10px; }
 
 .SoMe {
-  grid-column: 4/9;
+  grid-column: 4/10;
   display: flex;
   justify-content: center; }
 
@@ -138,7 +140,7 @@ img {
 
 .vinen-flasken {
   grid-column: 1/5;
-  background-image: url("../images/wineglass.png");
+  background-image: url("../images/merlot-falske.jpg");
   background-position: center;
   background-size: cover; }
 
@@ -171,7 +173,9 @@ img {
   display: grid;
   height: 500;
   background-image: url("../images/overlook-winyard-small-bw.png");
-  background-position: center; }
+  background-position: center;
+  -webkit-background-size: cover;
+  background-size: cover; }
 
 .gaarden-beskrivelse {
   grid-column: 3/11; }
@@ -188,7 +192,9 @@ img {
 .instagram-tal {
   grid-column: 1/4;
   grid-row: 1/3;
-  background-image: url("../images/butik.jpg"); }
+  background-image: url("../images/berries.jpg");
+  background-position: center;
+  background-size: cover; }
 
 .overlayfarvewhite {
   background-color: rgba(247, 247, 247, 0.8);
@@ -232,7 +238,7 @@ img {
 .instagrambillede.billede5 {
   grid-row: 2/3;
   grid-column: 7/10;
-  background-image: url("../images/instagramfoto1.jpeg");
+  background-image: url("../images/instagrambillede.jpg");
   background-size: cover;
   background-position: center; }
 
@@ -312,23 +318,96 @@ img {
   background-color: #6fcaf7; }
 
 /*================Responsivitet===============*/
-@media screen and (min-width: 660px) {
+@media screen and (min-width: 800px) {
   h1 {
-    font-size: 7vw; }
-
+    font-size: 7vw; } }
+@media screen and (min-width: 800px) {
   .contact_flex {
     display: flex;
-    -webkit-flex: flex;
-    justify-content: center; }
-
-  /*================Forside===============*/
-  /*================Kontakt===============*/ }
+    justify-content: center; } }
 @media screen and (min-width: 1600px) {
   h1 {
     font-size: 100px; }
 
   /*================Forside===============*/
   /*================Kontakt===============*/ }
+@media screen and (max-width: 981px) {
+  /*================generelt===============*/
+  .tablet {
+    display: none; }
+
+  /*================vin===============*/
+  .vinen-flasken {
+    grid-column: 1/7; }
+
+  .vinen-tekst {
+    grid-column: 7/13; } }
+@media screen and (max-width: 644px) {
+  /*================generelt===============*/
+  .mobil {
+    display: none; }
+
+  /*================vin===============*/
+  .vinen {
+    height: auto; }
+
+  .vinen-flasken {
+    grid-row: 2/3;
+    grid-column: 1/13;
+    height: 381px; }
+
+  .vinen-tekst {
+    grid-row: 1/2;
+    grid-column: 1/13;
+    height: 500px; }
+
+  /*================Gaarden===============*/
+  .gaarden {
+    height: auto; }
+
+  /*================Instagram===============*/
+  .instagram {
+    height: auto; }
+
+  .instagrambillede {
+    height: 200px; }
+
+  .instagrambillede.billede1 {
+    grid-column: 1/7;
+    grid-row: 1/2; }
+
+  .instagrambillede.billede2 {
+    grid-column: 7/13;
+    grid-row: 1/2; }
+
+  .instagrambillede.billede3 {
+    grid-column: 1/7;
+    grid-row: 2/3; }
+
+  .instagrambillede.billede4 {
+    grid-column: 7/13;
+    grid-row: 2/3; }
+
+  .instagrambillede.billede5 {
+    display: none; }
+
+  .instagrambillede.billede6 {
+    display: none; }
+
+  .instagram-tal {
+    grid-row: 3/4;
+    grid-column: 1/13; }
+
+  .overlayfarvewhite h1 {
+    padding-top: 50px; }
+
+  .overlayfarvewhite {
+    height: 300px;
+    background-color: rgba(247, 247, 247, 0.8); }
+
+  /*================stedet===============*/
+  .stedet-beskrivelse {
+    grid-column: 1/13; } }
 /*================BURGER MENU===============*/
 .hamburger {
   z-index: 2;
