--- a/css/styles.scss
+++ b/css/styles.scss
@@ -30,7 +30,7 @@
 
 body {
   margin: 0; // Ingen kanter i siden af browser
-  font-family: "Futura PT";
+  font-family: "Futura PT", Futura;
   color: white;
   font-size: 16px;
   font-weight: normal;
@@ -42,6 +42,10 @@ h1, h2, h4, h5, h6 {
   padding: 30px;
   letter-spacing: 5px; //samme som tracking i PS
   text-transform: uppercase; //gør at alle overskrifter er UPPERCASE
+}
+
+h1 {
+  font-size: 50px;
 }
 
 h2 {
@@ -145,20 +149,19 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 }
 
 .contact_footer{
-  grid-column: 4/9;
-  margin-left: auto;
+  grid-column: 4/10;
   text-align: center;
 }
 
 .getintouch{
-  grid-column: 4/9;
+  grid-column: 4/10;
   margin-left: auto;
   margin-right: auto;
   font-weight: bold;
 }
 
 .contact_flex{
-  grid-column: 3/10;
+  grid-column: 2/12;
   margin-left: auto;
   margin-right: auto;
 
@@ -169,7 +172,7 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 }
 
 .SoMe{
-  grid-column: 4/9;
+  grid-column: 4/10;
   display: flex;
   justify-content: center;
 
@@ -194,7 +197,7 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 }
 .vinen-flasken {
   grid-column: 1/5;
-  background-image: url("../images/wineglass.png");
+  background-image: url("../images/merlot-falske.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -234,6 +237,8 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
   height: $sektion-hojde;
   background-image: url("../images/overlook-winyard-small-bw.png");
   background-position: center;
+  -webkit-background-size: cover;
+  background-size: cover;
 }
 
 .gaarden-beskrivelse {
@@ -255,7 +260,9 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 .instagram-tal {
   grid-column: 1/4;
   grid-row: 1/3;
-  background-image: url("../images/butik.jpg");
+  background-image: url("../images/berries.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 .overlayfarvewhite {
@@ -307,7 +314,7 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 .instagrambillede.billede5{
   grid-row: 2/3;
   grid-column: 7/10;
-  background-image: url("../images/instagramfoto1.jpeg");
+  background-image: url("../images/instagrambillede.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -403,24 +410,26 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 /*================Responsivitet===============*/
 
 
-@media screen and (min-width: 660px) {
+
+@media screen and (min-width: 800px) {
   // Alt over 660. Tablet og Desktop
-  h1{
+  h1 {
     font-size: 7vw;
   }
+}
+
+@media screen and (min-width: 800px) {
+  // Alt over 660. Tablet og Desktop
 
   .contact_flex{
     display: flex;
-    -webkit-flex: flex;
     justify-content: center;
   }
 
-  /*================Forside===============*/
-
-  /*================Kontakt===============*/
-
 
 }
+
+
 
 @media screen and (min-width: 1600px) {
   // Meget store desktop skærme
@@ -434,7 +443,112 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
   /*================Kontakt===============*/
 }
 
+@media screen and (max-width: 981px) {
+  // Alt over 660. Tablet og Desktop
 
+  /*================generelt===============*/
+ .tablet{
+   display: none;
+
+ }
+
+  /*================vin===============*/
+
+  .vinen-flasken {
+    grid-column: 1/7;
+  }
+
+  .vinen-tekst {
+    grid-column: 7/13;
+  }
+}
+
+@media screen and (max-width: 644px) {
+  // Alt over 660. Tablet og Desktop
+
+  /*================generelt===============*/
+  .mobil{
+    display: none;
+  }
+
+  /*================vin===============*/
+
+  .vinen {
+    height: auto;
+  }
+
+  .vinen-flasken {
+    grid-row: 2/3;
+    grid-column: 1/13;
+    height: 381px;
+  }
+
+  .vinen-tekst {
+    grid-row: 1/2;
+    grid-column: 1/13;
+    height: 500px;
+
+  }
+  /*================Gaarden===============*/
+  .gaarden{
+    height: auto;
+  }
+
+  /*================Instagram===============*/
+
+  .instagram{
+    height: auto;
+  }
+
+  .instagrambillede{
+    height: 200px;
+  }
+
+  .instagrambillede.billede1{
+    grid-column: 1/7;
+    grid-row: 1/2;
+  }
+  .instagrambillede.billede2{
+    grid-column: 7/13;
+    grid-row: 1/2;
+  }
+  .instagrambillede.billede3{
+    grid-column: 1/7;
+    grid-row: 2/3;
+  }
+  .instagrambillede.billede4{
+    grid-column: 7/13;
+    grid-row: 2/3;
+  }
+  .instagrambillede.billede5{
+    display: none;
+
+  }
+  .instagrambillede.billede6{
+    display: none;
+  }
+
+  .instagram-tal{
+    grid-row: 3/4;
+    grid-column: 1/13;
+  }
+
+  .overlayfarvewhite h1{
+    padding-top: 50px;
+
+  }
+
+  .overlayfarvewhite{
+    height: 300px;
+    background-color: rgba(247, 247, 247, 0.8);
+  }
+  /*================stedet===============*/
+  .stedet-beskrivelse{
+    grid-column: 1/13;
+  }
+
+
+}
 
 
 
