--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,7 @@ img {
   background-image: url("../images/moutain-small-BW.png");
   background-size: cover;
   background-position: bottom;
-  height: 500;
+  height: 500px;
   grid-template-rows: 100px auto; }
 
 .landing h1 {
@@ -102,7 +102,7 @@ img {
 /*================Footer==============*/
 .footer {
   display: grid;
-  height: 500;
+  height: 500px;
   background-image: url("../images/footer_img_bw.jpg");
   background-size: cover; }
 
@@ -140,7 +140,7 @@ img {
 ---------------------------------------------------------------------------*/
 .vinen {
   display: grid;
-  height: 500; }
+  height: 500px; }
 
 .vinen-flasken {
   grid-column: 1/5;
@@ -160,7 +160,7 @@ img {
   background-size: cover; }
 
 .vinen-flasken, p {
-  padding: 0 30 30 30; }
+  padding: 0px 30px 30px 30px; }
 
 .overlayfarvered {
   background-color: rgba(146, 4, 0, 0.61);
@@ -175,7 +175,7 @@ img {
 ---------------------------------------------------------------------------*/
 .gaarden {
   display: grid;
-  height: 500;
+  height: 500px;
   background-image: url("../images/overlook-winyard-small-bw.png");
   background-position: center;
   -webkit-background-size: cover;
@@ -191,8 +191,8 @@ img {
 ---------------------------------------------------------------------------*/
 .instagram {
   display: grid;
-  grid-template-rows: 250, 250;
-  height: 500;
+  grid-template-rows: 250px, 250px;
+  height: 500px;
   background-color: #f76640; }
 
 .instagram-tal {
@@ -260,7 +260,7 @@ img {
 ---------------------------------------------------------------------------*/
 .stedet {
   display: grid;
-  height: 500;
+  height: 500px;
   background-color: #c4f732; }
 
 .stedet-beskrivelse {
@@ -280,7 +280,7 @@ img {
 ---------------------------------------------------------------------------*/
 .kort {
   display: grid;
-  height: 500;
+  height: 500px;
   background-image: url("../images/kort.png");
   background-position: center;
   background-size: cover;
@@ -299,7 +299,7 @@ img {
 ---------------------------------------------------------------------------*/
 .kontaktinfo {
   display: grid;
-  height: 500;
+  height: 500px;
   background-color: #e3f787; }
 
 .form {
@@ -320,7 +320,7 @@ img {
 ---------------------------------------------------------------------------*/
 .googlemaps {
   display: grid;
-  height: 500;
+  height: 500px;
   background-color: #6fcaf7; }
 
 /*================Responsivitet===============*/
