--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ img {
 /*================HEADER===============*/
 .header {
   height: 100px;
-  background-image: url("../images/logo.png");
+  background-image: url("../Images/logo.png");
   background-size: cover;
   grid-column: 2/7;
   min-width: 100px;
@@ -88,10 +88,10 @@ img {
 
 /*================landing==============*/
 .landing {
-  background-image: url("../images/moutain-small-BW.png");
+  background-image: url("../Images/moutain-small-BW.png");
   background-size: cover;
   background-position: bottom;
-  height: 500px;
+  height: 500;
   grid-template-rows: 100px auto; }
 
 .landing h1 {
@@ -102,8 +102,8 @@ img {
 /*================Footer==============*/
 .footer {
   display: grid;
-  height: 500px;
-  background-image: url("../images/footer_img_bw.jpg");
+  height: 500;
+  background-image: url("../Images/footer_img_bw.jpg");
   background-size: cover; }
 
 .contact_footer {
@@ -119,6 +119,7 @@ img {
 .contact_flex {
   grid-column: 2/12;
   margin-left: auto;
+  margin-right: auto;
   margin-right: auto; }
 
 .contect_info {
@@ -140,7 +141,7 @@ img {
 ---------------------------------------------------------------------------*/
 .vinen {
   display: grid;
-  height: 500px; }
+  height: 500; }
 
 .vinen-flasken {
   grid-column: 1/5;
@@ -175,8 +176,8 @@ img {
 ---------------------------------------------------------------------------*/
 .gaarden {
   display: grid;
-  height: 500px;
-  background-image: url("../images/overlook-winyard-small-bw.png");
+  height: 500;
+  background-image: url("/images/overlook-winyard-small-bw.png");
   background-position: center;
   -webkit-background-size: cover;
   background-size: cover; }
@@ -191,8 +192,8 @@ img {
 ---------------------------------------------------------------------------*/
 .instagram {
   display: grid;
-  grid-template-rows: 250px, 250px;
-  height: 500px;
+  grid-template-rows: 250, 250;
+  height: 500;
   background-color: #f76640; }
 
 .instagram-tal {
@@ -260,11 +261,11 @@ img {
 ---------------------------------------------------------------------------*/
 .stedet {
   display: grid;
-  height: 500px;
+  height: 500;
   background-color: #c4f732; }
 
 .stedet-beskrivelse {
-  background-image: url("../images/stedet.png");
+  background-image: url("/images/stedet.png");
   background-position: center;
   background-size: cover;
   grid-column: 1/10; }
@@ -280,7 +281,7 @@ img {
 ---------------------------------------------------------------------------*/
 .kort {
   display: grid;
-  height: 500px;
+  height: 500;
   background-image: url("../images/kort.png");
   background-position: center;
   background-size: cover;
@@ -295,6 +296,41 @@ img {
   height: 30px;
   width: 70%;
   margin: 15px; }
+
+/*========================================================================
+ ==============================thewinyard====================================
+=========================================================================*/
+.gaarden2 {
+  display: grid;
+  background-image: url("../images/overlook-winyard-small-bw.png");
+  background-position: center;
+  -webkit-background-size: cover;
+  background-size: cover; }
+
+.gaarden-beskrivelse2 {
+  grid-column: 2/12;
+  max-width: 700px;
+  margin: auto; }
+
+.readmore {
+  grid-row: 2/3;
+  grid-column: 5/7; }
+
+.readless {
+  grid-row: 2/3;
+  grid-column: 7/9; }
+
+.more {
+  grid-row: 3/4;
+  grid-column: 3/10;
+  padding: 20px; }
+
+.stedet2 {
+  height: 500;
+  display: none;
+  background-image: url("../images/stedet.png");
+  background-position: center;
+  background-size: cover; }
 
 /*========================================================================
  ==============================wine====================================
@@ -352,7 +388,7 @@ img {
 ---------------------------------------------------------------------------*/
 .kontaktinfo {
   display: grid;
-  height: 500px;
+  height: 500;
   background-color: #e3f787; }
 
 .form {
@@ -387,7 +423,7 @@ img {
 ---------------------------------------------------------------------------*/
 .googlemaps {
   display: grid;
-  height: 500px;
+  height: 500;
   background-color: #6fcaf7; }
 
 /*================Responsivitet===============*/
