--- a/css/styles.scss
+++ b/css/styles.scss
@@ -237,7 +237,7 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 .gaarden {
   display: grid;
   height: $sektion-hojde;
-  background-image: url("/images/overlook-winyard-small-bw.png");
+  background-image: url("../images/overlook-winyard-small-bw.png");
   background-position: center;
   -webkit-background-size: cover;
   background-size: cover;
@@ -344,7 +344,7 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
   background-color: #c4f732;
 }
 .stedet-beskrivelse{
-  background-image: url("/images/stedet.png");
+  background-image: url("../images/stedet.png");
   background-position: center;
   background-size: cover;
   grid-column: 1/10;
