--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,7 @@ img {
 ---------------------------------------------------------------------------*/
 .instagram {
   display: grid;
-  grid-template-rows: 250, 250;
+  grid-template-rows: 500/2,500/2;
   height: 500;
   background-color: #f76640; }
 
