--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ img {
 /*================HEADER===============*/
 .header {
   height: 100px;
-  background-image: url("../Images/logo.png");
+  background-image: url("../images/logo.png");
   background-size: cover;
   grid-column: 2/7;
   min-width: 100px;
