--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ h1, h2, h4, h5, h6 {
   text-transform: uppercase; }
 
 h1 {
-  font-size: 50px; }
+  font-size: 30px; }
 
 h2 {
   font-size: 38px; }
@@ -102,7 +102,7 @@ img {
 /*================Footer==============*/
 .footer {
   display: grid;
-  height: 500;
+  height: 500px;
   background-image: url("../images/footer_img_bw.jpg");
   background-size: cover; }
 
@@ -141,7 +141,7 @@ img {
 ---------------------------------------------------------------------------*/
 .vinen {
   display: grid;
-  height: 500; }
+  height: 500px; }
 
 .vinen-flasken {
   grid-column: 1/5;
@@ -176,7 +176,7 @@ img {
 ---------------------------------------------------------------------------*/
 .gaarden {
   display: grid;
-  height: 500;
+  height: 500px;
   background-image: url("../images/overlook-winyard-small-bw.png");
   background-position: center;
   -webkit-background-size: cover;
@@ -193,7 +193,7 @@ img {
 .instagram {
   display: grid;
   grid-template-rows: 500/2,500/2;
-  height: 500;
+  height: 500px;
   background-color: #f76640; }
 
 .instagram-tal {
@@ -427,9 +427,13 @@ img {
   background-color: #6fcaf7; }
 
 /*================Responsivitet===============*/
+@media screen and (max-width: 800px) {
+  #conin {
+    width: 80%;
+    height: 15px; } }
 @media screen and (min-width: 800px) {
   h1 {
-    font-size: 7vw; }
+    font-size: 50px; }
 
   .contact_flex {
     display: flex;
